--- a/.github/workflows/post-matches.yml
+++ b/.github/workflows/post-matches.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: '16'
           
       - name: Install dependencies
-        run: npm ci
+        run: npm i
         
       - name: Run match posting script
         run: node match-bot.js
