--- a/.github/workflows/post-matches.yml
+++ b/.github/workflows/post-matches.yml
@@ -29,3 +29,7 @@ jobs:
         env:
           BLOG_ID: ${{ secrets.BLOG_ID }}
           API_KEY: ${{ secrets.API_KEY }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
+
+
