--- a/.github/workflows/post-matches.yml
+++ b/.github/workflows/post-matches.yml
@@ -1,38 +1,45 @@
 name: Post Matches to Blogger
+
 on:
   schedule:
-    - cron: '0 1 * * *'  
-  workflow_dispatch:     
+    - cron: '0 1 * * *'
+  workflow_dispatch:
 
 jobs:
   post-matches:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '18'
-          
+
       - name: Install dependencies
         run: npm install axios cheerio
-        
-      - name: Check Environment Variables
+
+      - name: Generate Blogger Access Token
+        id: generate_token
         run: |
-          echo "Checking for environment variable availability..."
-          echo "BLOG_ID is set: ${{ secrets.BLOG_ID != '' }}"
-          echo "CLIENT_ID is set: ${{ secrets.CLIENT_ID != '' }}"
-          echo "CLIENT_SECRET is set: ${{ secrets.CLIENT_SECRET != '' }}"
-          echo "REFRESH_TOKEN is set: ${{ secrets.REFRESH_TOKEN != '' }}"
-        
+          echo "Fetching new ACCESS_TOKEN..."
+          ACCESS_TOKEN=$(curl -s -X POST https://oauth2.googleapis.com/token \
+            -H "Content-Type: application/x-www-form-urlencoded" \
+            -d "client_id=${{ secrets.CLIENT_ID }}" \
+            -d "client_secret=${{ secrets.CLIENT_SECRET }}" \
+            -d "refresh_token=${{ secrets.REFRESH_TOKEN }}" \
+            -d "grant_type=refresh_token" | jq -r '.access_token')
+
+          echo "ACCESS_TOKEN=${ACCESS_TOKEN}" >> $GITHUB_ENV
+        env:
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
+
       - name: Run match posting script
         run: node match-bot.js
         env:
           BLOG_ID: ${{ secrets.BLOG_ID }}
           API_KEY: ${{ secrets.API_KEY }}
-          CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
-
-
+          ACCESS_TOKEN: ${{ env.ACCESS_TOKEN }}
