--- a/.github/workflows/post-matches.yml
+++ b/.github/workflows/post-matches.yml
@@ -2,48 +2,66 @@ name: Post Matches to Blogger
 
 on:
   schedule:
-    - cron: '0 1 * * *'  # Runs every day at 1:00 AM UTC
+    - cron: '0 */6 * * *'
   workflow_dispatch:
 
 jobs:
   post-matches:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+    
+    - name: Install dependencies
+      run: |
+        npm install axios cheerio
+    
+    - name: Install jq
+      run: sudo apt-get install jq
+    
+    - name: Generate Blogger Access Token
+      run: |
+        ACCESS_TOKEN=$(curl -s -X POST https://oauth2.googleapis.com/token \
+          -H "Content-Type: application/x-www-form-urlencoded" \
+          -d "client_id=${{ secrets.BLOGGER_CLIENT_ID }}" \
+          -d "client_secret=${{ secrets.BLOGGER_CLIENT_SECRET }}" \
+          -d "refresh_token=${{ secrets.BLOGGER_REFRESH_TOKEN }}" \
+          -d "grant_type=refresh_token" | jq -r '.access_token')
+        echo "ACCESS_TOKEN=$ACCESS_TOKEN" >> $GITHUB_ENV
+    
+    - name: Run match posting script
+      env:
+        BLOG_ID: ${{ secrets.BLOG_ID }}
+        API_KEY: ${{ secrets.BLOGGER_API_KEY }}
+        ACCESS_TOKEN: ${{ env.ACCESS_TOKEN }}
+      run: node match-bot.js
+    
+    - name: Commit and push URL mappings
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        
+        # Check if match-urls.json exists and has content
+        if [ -f "match-urls.json" ] && [ -s "match-urls.json" ]; then
+          git add match-urls.json
           
-      - name: Install dependencies
-        run: npm install axios cheerio
-        
-      - name: Install jq
-        run: sudo apt-get install jq
-        
-      - name: Generate Blogger Access Token
-        id: generate_token
-        run: |
-          RESPONSE=$(curl -s -X POST https://oauth2.googleapis.com/token \
-            -d client_id="${{ secrets.CLIENT_ID }}" \
-            -d client_secret="${{ secrets.CLIENT_SECRET }}" \
-            -d refresh_token="${{ secrets.REFRESH_TOKEN }}" \
-            -d grant_type=refresh_token)
-          echo "OAuth response: $RESPONSE"
-          ACCESS_TOKEN=$(echo "$RESPONSE" | jq -r '.access_token')
-          if [[ "$ACCESS_TOKEN" == "null" || -z "$ACCESS_TOKEN" ]]; then
-            echo "❌ Failed to generate access token."
-            exit 1
+          # Only commit if there are changes
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update match URL mappings - $(date '+%Y-%m-%d %H:%M:%S')"
+            git push
+            echo "✅ URL mappings committed and pushed"
           fi
-          echo "ACCESS_TOKEN=$ACCESS_TOKEN" >> $GITHUB_ENV
-          
-      - name: Run match posting script
-        run: node match-bot.js
-        env:
-          BLOG_ID: ${{ secrets.BLOG_ID }}
-          API_KEY: ${{ secrets.API_KEY }}
-          ACCESS_TOKEN: ${{ env.ACCESS_TOKEN }}
-          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
-          CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        else
+          echo "⚠️ No match-urls.json file created"
+        fi
+      continue-on-error: true
